2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add support for a new magic symbol _gp_disp on mips to handle PIC
	binaries.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Use $t9 for indirect calls from asm to C as PIC ABI requires.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove -march=mips3 from TARGET_CCASFLAGS as it creates linking problem
	when rest of GRUB is compiled for hisher stepping. Instead use
	.set mips3/.set mips1 around cache and sync opcodes.

2013-11-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify GOT/trampoline handling between PPC, MIPS and IA64 as they
	do essentially the same thing, do it in similar way.

2013-11-21  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.c (main): If a source directory is not
	specified, read platform-specific files from subdirectories of
	pkglibdir, not pkgdatadir.

2013-11-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/normal/progress.c: Remove unused file.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/crypto.c (grub_crypto_hash): Remove variable length
	array.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in: Say explicit "grub configuration" rather
	than grub.cfg.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* coreboot.cfg: Add missing file.

2013-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Allow STRIP to be empty when creating windowszip.

2013-11-19  Axel Kellermann <axel.kellermann@gmx.de>

	* util/grub.d/30_os-prober.in: Add GRUB_OS_PROBER_SKIP_LIST to
	selectively skipping systems.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-mkimage): Add
	grub-core/osdep/aros/config.c to extra_dist.
	* conf/Makefile.extra-dist (EXTRA_DIST): Add docs/autoiso.cfg,
	docs/osdetect.cfg, grub-core/gnulib-fix-null-deref.diff,
	grub-core/gnulib-fix-width.diff, grub-core/gnulib-no-abort.diff, and
	grub-core/gnulib-no-gets.diff.
